[package]
name = "mod-dao"
version = "0.1.0"
authors = []
edition = "2021"
repository = "https://github.com/CronCats/cw-croncat"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw2 = { workspace = true }
mod-sdk = { workspace = true }
thiserror = { workspace = true }
schemars = "0.8"
serde = { workspace = true }

[dev-dependencies]
cw20 = { workspace = true }
cw20-base = { workspace = true }
cw20-stake = { workspace = true }
cw-multi-test = { workspace = true }
cw-utils = { workspace = true }
dao-voting = { workspace = true }
dao-proposal-single = { workspace = true }
dao-proposal-multiple = { workspace = true }
dao-voting-cw20-staked = { workspace = true }
dao-core = { workspace = true }
dao-interface = { workspace = true }
