[package]
name = "croncat-mod-dao"
version = "1.0.0"
authors = { workspace = true }
edition = "2021"
repository = "https://github.com/CronCats/cw-croncat"
license = { workspace = true }
description = "Provides CosmWasm queries of DAO contracts, helpful when making CronCat tasks with queries."

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw2 = { workspace = true }
mod-sdk = { workspace = true }
schemars = "0.8.11"
serde = { workspace = true }
dao-proposal-single = { workspace = true, features = ["library"] }
dao-proposal-multiple = { workspace = true, features = ["library"] }
dao-voting = { workspace = true }

[dev-dependencies]
cw20 = { workspace = true }
cw20-base = { workspace = true }
cw20-stake = { workspace = true }
cw-multi-test = { workspace = true }
cw-utils = { workspace = true }
dao-voting-cw20-staked = { workspace = true }
dao-core = { workspace = true }
dao-interface = { workspace = true }
