[package]
name = "croncat-mod-generic"
version = "0.1.2"
authors = []
edition = "2021"
repository = "https://github.com/CronCats/cw-croncat"
license = { workspace = true }
description = "Allows for CosmWasm raw queries through this module, helpful when making CronCat tasks with queries."

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw2 = { workspace = true }
mod-sdk = { workspace = true }
serde-cw-value = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
cw4 = { workspace = true }
cw4-group = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true }
cw-multi-test = { workspace = true }
