[package]
name = "croncat-integration-testing"
version = "1.0.0"
authors = { workspace = true }
edition = "2021"
repository = "https://github.com/CronCats/cw-croncat"
license = { workspace = true }
description = "Test helpers for dApps integrating CosmWasm contracts with CronCat automation."

[dependencies]
thiserror = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw20 = { workspace = true }
croncat-sdk-agents = { workspace = true }
croncat-sdk-factory = { workspace = true }
croncat-sdk-tasks = { workspace = true }
croncat-sdk-manager = { workspace = true }
cw-utils = { workspace = true }
serde-json-wasm = { workspace = true }
serde_json = { workspace = true }
# These are for the src/tests/contracts.rs file
croncat-agents = { workspace = true }
croncat-tasks = { workspace = true }
croncat-manager = { workspace = true }
croncat-factory = { workspace = true }
cw-multi-test = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
