[package]
name = "croncat-integration-utils"
version = "0.1.5"
authors = { workspace = true }
edition = "2021"
repository = "https://github.com/CronCats/cw-croncat"
license = { workspace = true }
description = "Integrate CosmWasm contracts with CronCat automation."

[dependencies]
thiserror = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw20 = { workspace = true }
croncat-sdk-agents = { workspace = true }
croncat-sdk-factory = { workspace = true }
croncat-sdk-tasks = { workspace = true }
croncat-sdk-manager = { workspace = true }
cw-utils = { workspace = true }
serde-json-wasm = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
