[package]
name = "croncat-integration-utils"
version = "1.0.0"
authors = { workspace = true }
edition = "2021"
repository = "https://github.com/CronCats/cw-croncat"
license = { workspace = true }
description = "Integrate CosmWasm contracts with CronCat automation."

[dependencies]
thiserror = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw20 = { workspace = true }
croncat-sdk-agents = { version = "1.0.0" }
croncat-sdk-factory = { version = "1.0.0" }
croncat-sdk-tasks = { version = "1.0.0" }
croncat-sdk-manager = { version = "1.0.0" }
croncat-mod-generic = { version = "1.0.0" }
cw-utils = { workspace = true }
serde-json-wasm = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
